--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <div class="portfolio-info">
               <h4>Worker Action 1</h4>
               <p>Worker Action</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link"
+              <a href="assets/img/portfolio/portfolio-1.JPG" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
@@ -392,7 +392,7 @@
             <div class="portfolio-info">
               <h4>App 2</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link"
+              <a href="assets/img/portfolio/portfolio-3.JPG" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
@@ -427,7 +427,7 @@
             <div class="portfolio-info">
               <h4>App 3</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link"
+              <a href="assets/img/portfolio/portfolio-6.JPG" data-gall="portfolioGallery" class="venobox preview-link"
                 title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
