--- a/office.html
+++ b/office.html
@@ -94,11 +94,11 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>One Time Cleaning Details</h2>
+                    <h2>Office Cleaning Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#services">Services</a></li>
-                        <li>One Time Cleaning Details</li>
+                        <li>Office Cleaning Details</li>
                     </ol>
                 </div>
 
@@ -107,14 +107,13 @@
         <section id="services">
             <div class="container">
                 <div class="section-header">
-                    <h2>One Time Cleaning</h2>
+                    <h2>Office Cleaning</h2>
                     <p>
-                        We clean services offerings include cleaning your living room,
-                        kitchen, bedrooms, bathrooms or office spaces. Our scope of work
-                        includes mopping, sweeping, ceiling fan wiping, cleaning windows,
-                        wiping grills, wiping furniture/sofa/appliances, cleaning toilets,
-                        car polishing, balcony cleaning, rubbish removal and common
-                        housekeeping services etc.
+                        We clean services offerings include cleaning the office space by wipping internal windows,
+                        sweeping and mopping, vacuum carpeted office area, wipe furniture, sofa and other appliances
+                        and remove rubbish. We also clean the restroom by wipe clean all surfaces - counters and
+                        cabinets,
+                        clean sinks and mirrors, scrub bathroom sinks and toilet bowl, sweep and damp mop tile floors.
                     </p>
                 </div>
 
