--- a/other.html
+++ b/other.html
@@ -94,11 +94,11 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>One Time Cleaning Details</h2>
+                    <h2>Other Cleaning Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#services">Services</a></li>
-                        <li>One Time Cleaning Details</li>
+                        <li>Other Cleaning Details</li>
                     </ol>
                 </div>
 
@@ -107,88 +107,32 @@
         <section id="services">
             <div class="container">
                 <div class="section-header">
-                    <h2>One Time Cleaning</h2>
+                    <h2>Other Cleaning</h2>
                     <p>
-                        We clean services offerings include cleaning your living room,
-                        kitchen, bedrooms, bathrooms or office spaces. Our scope of work
-                        includes mopping, sweeping, ceiling fan wiping, cleaning windows,
-                        wiping grills, wiping furniture/sofa/appliances, cleaning toilets,
-                        car polishing, balcony cleaning, rubbish removal and common
-                        housekeeping services etc.
+                        We provide other services.
                     </p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="box wow fadeInLeft">
-                            <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="hourly-rate.html">4 Hours 1 Worker</a></h4>
+                            <div class="icon"><i class="fa fa-briefcase"></i></div>
+                            <h4 class="title"><a href="hourly-rate.html">Pipe & Water Tank Cleaning</a></h4>
                             <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM100 <br>
-                                <i class="fa fa-check-square-o"></i> Suggest properties type: Single Storey House, 1.5
-                                Storey
-                                House, Condo/Apartments/Condo < 1200 sqf </p> <!-- <a href="portfolio-details.html"
-                                    class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
+                                <i class="fa fa-dollar"></i> Request A Free Phone Call Quotation <br>
+                                <i class="fa fa-phone"></i> +60 18-367 4990 </p>
                         </div>
                     </div>
 
                     <div class="col-lg-6">
                         <div class="box wow fadeInRight">
-                            <div class="icon"><i class="fa fa-users"></i></div>
+                            <div class="icon"><i class="fa fa-wrench"></i></div>
                             <h4 class="title">
-                                <a href="">4 Hours 2 Workers</a>
+                                <a href="">Aircon Cleaning</a>
                             </h4>
                             <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM160 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Double Storey House,
-                                Semi-D, Condo/Apartments/Condo >
-                                1200-1500 sqf
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="">8 Hours 1 Worker</a></h4>
-                            <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM160 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Double Storey House,
-                                Semi-D, Condo/Apartments/Condo > 1000-1500 sqf
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="">2 Hours 1 Worker</a></h4>
-                            <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Evening slot only (6pm-8pm) <br>
-                                <i class="fa fa-dollar"></i> Price RM70 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Studio, Single Storey
-                                House
-                                < 1000 sqf <br>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="icon"><i class="fa fa-users"></i></div>
-                            <h4 class="title"><a href="">2 Hours 2 Worker</a></h4>
-                            <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Evening slot only (6pm-8pm) <br>
-                                <i class="fa fa-dollar"></i> Price RM110 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Studio, Single Storey
-                                House
-                                < 1000 sqf <br>
+                                <i class="fa fa-dollar"></i> Request A Free Phone Call Quotation <br>
+                                <i class="fa fa-phone"></i> +60 18-367 4990 </p>
                             </p>
                         </div>
                     </div>
