--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-clock-o"></i></div>
-              <h4 class="title"><a href="hourly-rate.html">Hourly Rate Cleaning</a></h4>
+              <h4 class="title"><a href="hourly-rate.html">One Time Cleaning</a></h4>
               <p class="description">
                 Voluptatum deleniti atque corrupti quos dolores et quas
                 molestias excepturi sint occaecati cupiditate non provident
@@ -194,7 +194,7 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-calendar"></i></div>
               <h4 class="title">
-                <a href="">Package Cleaning (Weekly/Bi-Weekly/Monthly)</a>
+                <a href="package.html">Package Cleaning (Weekly/Bi-Weekly/Monthly)</a>
               </h4>
               <p class="description">
                 Minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -207,7 +207,7 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-institution"></i></div>
-              <h4 class="title"><a href="">Commercial/Office Cleaning</a></h4>
+              <h4 class="title"><a href="office.html">Office Cleaning</a></h4>
               <p class="description">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse
                 cillum dolore eu fugiat nulla pariatur trinige zareta lobur
@@ -219,7 +219,7 @@
           <div class="col-lg-6">
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-ellipsis-h"></i></div>
-              <h4 class="title"><a href="">Other Services</a></h4>
+              <h4 class="title"><a href="other.html">Other Services</a></h4>
               <p class="description">
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa
                 qui officia deserunt mollit anim id est laborum rideta zanox
