--- a/package.html
+++ b/package.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>iCuci Cleaning Services</title>
+    <title>iCuc Cleaning Services</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -94,11 +94,11 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>One Time Cleaning Details</h2>
+                    <h2>Package Cleaning Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#services">Services</a></li>
-                        <li>One Time Cleaning Details</li>
+                        <li>Package Cleaning Details</li>
                     </ol>
                 </div>
 
@@ -107,14 +107,12 @@
         <section id="services">
             <div class="container">
                 <div class="section-header">
-                    <h2>One Time Cleaning</h2>
+                    <h2>Package Cleaning</h2>
                     <p>
-                        We clean services offerings include cleaning your living room,
-                        kitchen, bedrooms, bathrooms or office spaces. Our scope of work
-                        includes mopping, sweeping, ceiling fan wiping, cleaning windows,
-                        wiping grills, wiping furniture/sofa/appliances, cleaning toilets,
-                        car polishing, balcony cleaning, rubbish removal and common
-                        housekeeping services etc.
+                        Apply for package cleaning and enjoy the latest promotion. Check out the Packages & Promotion.
+                        Total Best Value Package price to be paid in advance immediately after first cleaning service.
+                        Otherwise, customer will be charged as one-time service fee. Package must be utilized within 6
+                        months.
                     </p>
                 </div>
 
@@ -122,11 +120,9 @@
                     <div class="col-lg-6">
                         <div class="box wow fadeInLeft">
                             <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="hourly-rate.html">4 Hours 1 Worker</a></h4>
+                            <h4 class="title"><a href="hourly-rate.html">4 times X 4 Hours 1 Worker (Save RM40)</a></h4>
                             <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM100 <br>
+                                <i class="fa fa-dollar"></i> Price RM360 <br>
                                 <i class="fa fa-check-square-o"></i> Suggest properties type: Single Storey House, 1.5
                                 Storey
                                 House, Condo/Apartments/Condo < 1200 sqf </p> <!-- <a href="portfolio-details.html"
@@ -138,12 +134,10 @@
                         <div class="box wow fadeInRight">
                             <div class="icon"><i class="fa fa-users"></i></div>
                             <h4 class="title">
-                                <a href="">4 Hours 2 Workers</a>
+                                <a href="">4 times X 4 Hours 2 Workers (Save RM80)</a>
                             </h4>
                             <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM160 <br>
+                                <i class="fa fa-dollar"></i> Price RM560 <br>
                                 <i class="fa fa-check-square-o"></i> Suggested properties type: Double Storey House,
                                 Semi-D, Condo/Apartments/Condo >
                                 1200-1500 sqf
@@ -154,41 +148,11 @@
                     <div class="col-lg-6">
                         <div class="box wow fadeInLeft" data-wow-delay="0.2s">
                             <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="">8 Hours 1 Worker</a></h4>
+                            <h4 class="title"><a href="">4 times X 8 Hours 1 Worker (Save RM80)</a></h4>
                             <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Morning & Afternoon slot only (8am-6pm)
-                                <br>
-                                <i class="fa fa-dollar"></i> Price RM160 <br>
+                                <i class="fa fa-dollar"></i> Price RM560 <br>
                                 <i class="fa fa-check-square-o"></i> Suggested properties type: Double Storey House,
                                 Semi-D, Condo/Apartments/Condo > 1000-1500 sqf
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="icon"><i class="fa fa-user"></i></div>
-                            <h4 class="title"><a href="">2 Hours 1 Worker</a></h4>
-                            <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Evening slot only (6pm-8pm) <br>
-                                <i class="fa fa-dollar"></i> Price RM70 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Studio, Single Storey
-                                House
-                                < 1000 sqf <br>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="icon"><i class="fa fa-users"></i></div>
-                            <h4 class="title"><a href="">2 Hours 2 Worker</a></h4>
-                            <p class="description">
-                                <i class="fa fa-plus-square"></i> Applicable for Evening slot only (6pm-8pm) <br>
-                                <i class="fa fa-dollar"></i> Price RM110 <br>
-                                <i class="fa fa-check-square-o"></i> Suggested properties type: Studio, Single Storey
-                                House
-                                < 1000 sqf <br>
                             </p>
                         </div>
                     </div>
@@ -197,7 +161,9 @@
             </div>
         </section>
 
+
     </main><!-- End #main -->
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container">
