--- a/other.html
+++ b/other.html
@@ -117,7 +117,7 @@
                     <div class="col-lg-6">
                         <div class="box wow fadeInLeft">
                             <div class="icon"><i class="fa fa-briefcase"></i></div>
-                            <h4 class="title"><a href="hourly-rate.html">Pipe & Water Tank Cleaning</a></h4>
+                            <h4 class="title"><a href="">Pipe & Water Tank Cleaning</a></h4>
                             <p class="description">
                                 <i class="fa fa-dollar"></i> Request A Free Phone Call Quotation <br>
                                 <i class="fa fa-phone"></i> +60 18-367 4990 </p>
