--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <!-- End Call To Action Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="wow fadeInUp">
+    <!-- <section id="team" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>Our Team</h2>
@@ -660,7 +660,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
