--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#coverArea">Cover Area</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <!-- <li><a href="#team">Team</a></li> -->
           <li class="menu-has-children">
             <a href="">Drop Down</a>
             <ul>
